# global-claude-settings

./: .gitignore  CLAUDE.md  README.md  copy.sh  pyproject.toml  tests.sh
.claude/: settings.json
.claude/claude-official-docs/: README.md  claude-code-docs-map.md  context-window.md  generate_docs_map.py  hooks-gotchas.md  hooks-in-skills-and-agents.md  llms.md  permission-modes.md  permissions.md  skills.md  subagents.md  token-optimization-gotchas.md  worktrees.md
.claude/claude_utils/: collect_cost.py  collect_user_prompts.py  observe.py
.claude/coding-rules/: pep8.md  test-policy.md
.claude/hooks/: collect-cost.sh  collect-user-prompts.sh  notify-done.sh  observe.sh  statusline.sh  verify-safe-command.sh
.claude/rules/: cost-handling.md  observation-handling.md  user-prompts-handling.md
.claude/skills/rules-claude-api/: SKILL.md
.claude/tests/: test_collect_cost.py  test_collect_user_prompts.py  test_observe.py  test_verify_safe_command.py
