[project]
name = "global-claude-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "titlecase>=2.4.1",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
known-first-party = ["claude_utils", "tests"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false
